
3.3.5.0 (not yet released)
- patch #2932113 [information_schema] Slow export when having lots of
  databases, thanks to Stéphane Pontier - shadow_walker
- bug #3022705 [import] Import button does not work in Catalan when there
  is no progress bar possible
- bug [replication] Do not offer information_schema in the list of databases
- bug [js] Avoid loading twice a js file

3.3.4.0 (2010-06-28)
- bug #2996161 [import] properly escape import value
- bug #2998889 [import] Import button does not work in Catalan
- [browse] Fix handling of sort order if only column is specified.
+ [lang] Greek update, thanks to Panagiotis Papazoglou - panos78
+ [lang] Updated lot of translation based on work done in master branch.
- bug #3008411 [databases] Last dropped database remains active in navi
- bug #2986383 [parser] Not all data being shown / counted
- bug [synchronize] Rows were deleted in target table regardless of the
  "Would you like to delete..." option
- bug [privileges] List of tables not shown when the db name has a wildcard
- bug #3011126 [display] Edit link missing after long query
- patch #3013264 [doc] FAQ 1.40 uses a comma instead of a period,
  thanks to Isaac Bennetch - ibennetch
- [engines] Fix getting InnoDB status.
- bug #2986422 [import] Results for query are not displayed

3.3.3.0 (2010-05-10)
- patch #2982480 [navi] Do not group if there would be one table in group,
  thanks to Lorikeet Lee.
- patch #2983492 [sync] When asking to synchronize Structure and Data,
  only Structure is done, thanks to Ankit Gupta - ankitgupta3
- patch #2984893 [engines] InnoDB storage page emits a warning,
  thanks to Madhura Jayaratne - madhuracj
- bug #2974687, bug #2974692 [compatibility] PHPExcel : IBM AIX iconv() does not work,
  thanks to Björn Wiberg - bwiberg
- bug #2983066 [interface] Flush table on table operations shows the query twice, 
  thanks to Martynas Mickevičius - BlinK_
- bug #2983060, patch #2987900 [interface] Fix initial state of tables in